--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
 <body>
-	<div id="app">
+	<div class="container">
+		<div id="app">
+		</div>
 	</div>
+	<script src="bundle.js"></script>
 </body>
 </html>
