Added funcitonality for time and weather

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+	<!-- Import jQuery -->
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 	<!-- Import Bootstrap CDN -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Import custom CSS -->
