Made a number of adjustments to the components and began the layout of the page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   crossorigin="anonymous"></script>
 	<!-- Import Bootstrap CDN -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- Import weather icons -->
+	<link rel="stylesheet" href="./style/weather-icons.min.css">
 	<!-- Import custom CSS -->
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
