--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Import weather icons -->
 	<link rel="stylesheet" href="./style/weather-icons.min.css">
+	<!-- Import CalIcons -->
+	<link rel="stylesheet" href="./style/calicons.css">
 	<!-- Import custom CSS -->
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
