Added some dummyData and structured it properly to build out a chart. Learning how to build charts...

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <head>
 	<!-- Import jQuery -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  	<!-- Import D3 -->
-  	<script src="https://d3js.org/d3.v4.min.js"></script>
+  	<!--Import Chart.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"> </script>
 	<!-- Import Bootstrap CDN -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Import weather icons -->
